--- a/personal.html
+++ b/personal.html
@@ -9,9 +9,6 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
-	<script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
 
 <body>
@@ -54,7 +51,6 @@ I thrive on building from the ground up whether it's designing a 2D game in C++ 
 					</div>
 				</div>
 			</div>
-			
 			<div class="main-container">
 				<h2 class = "main-container-title">
 					Projects	
@@ -87,8 +83,9 @@ I thrive on building from the ground up whether it's designing a 2D game in C++ 
 				</div>
 				<div class="project3-container">
 					<div class ="img3-container">
-						<img src = "assets/Screenshot 2025-06-06 at 11.48.27 AM.png" alt="routeSS1" class = "project3-pic1">
-						<img src = "assets/Screenshot 2025-06-06 at 11.50.57 AM.png", alt="routeSS2" class = "project3-pic2">
+						<img src = "assets/route2.png" alt="routeSS1" class = "project3-pic1">
+						<img src = "assets/route1.png", alt="routeSS2" class = "project3-pic2">
+						<img src = "assets/route3.png", alt="routeSS3" class = "project3-pic3">
 					</div>
 					<div class = "project3-header">
 						<h3 class = "project3-title">
@@ -119,11 +116,11 @@ I thrive on building from the ground up whether it's designing a 2D game in C++ 
 					</div>
 					<button class="back-top-button" id = "scrollToTopBtn">⬆ Back to Top</button>
 				</div>
-			<div class="footer">
+		</div>
+		<div class="footer">
 				<p class="footer-text">&copy;2025 Marco Otero</p>
 				<p class="footer-text">Made with ❤️</p>
 			</div>
-		</div>
 	</main>
 	<script src="main.js"></script>
 	
