working bar, still need to edit how much it slides

--- a/personal.html
+++ b/personal.html
@@ -25,7 +25,7 @@ I thrive on building from the ground up whether it's designing a 2D game in C++ 
 					<button onclick = "window.location.href='assets/marco-otero-resume.pdf';" class="resume-button" target="_blank">Download Resume</button>
 				</div>
 			</div>
-			<div class="outside-links">
+			<div class="outside-links" id="outside-links">
 						<h4 class = "outside-links-caption"> Contact Me </h4>
 						<a href = "https://www.linkedin.com/in/marco-otero935" class = "linkedin-icon" target = "_blank">
 							<img src = "assets/icons8-linkedin.svg" class = "linkedin-icon-img">					
