working outside links bar, don't understand how but it works, some edit in html that i thought were bugging

--- a/personal.html
+++ b/personal.html
@@ -22,7 +22,7 @@
 I thrive on building from the ground up whether it's designing a 2D game in C++ or constructing a PC. My passion lies in exploring the intersection of hardware and software, and I seek out projects that challenge me to learn and innovate. Beyond coding, I enjoy disassembling, testing, and rebuilding, always curious to understand the inner working of things and how to improve them.
 				</div>
 				<div class = "contact">
-					<button onclick = "window.location.href='assets/marco-otero-resume.pdf';" class="resume-button" target="_blank">Download Resume</button>
+					<button onclick = "window.location.href='assets/marco-otero-resume.pdf';" class="resume-button" target="_blank"  type="button">Download Resume</button>
 				</div>
 			</div>
 			<div class="outside-links" id="outside-links">
@@ -113,7 +113,7 @@ I thrive on building from the ground up whether it's designing a 2D game in C++ 
 							</div>
 						</div>
 					</div>
-					<button class="back-top-button" id = "scrollToTopBtn">⬆ Back to Top</button>
+					<button class="back-top-button" id = "scrollToTopBtn" type="button">⬆ Back to Top</button>
 				</div>
 		</div>
 		<div class="footer">
