outside links change in js and css for smaller screens, some classes in html, some colors in css and change to linkedin icon

--- a/personal.html
+++ b/personal.html
@@ -26,7 +26,7 @@ I thrive on building from the ground up whether it's designing a 2D game in C++ 
 				</div>
 			</div>
 			<div class="outside-links" id="outside-links">
-						<h4 class = "outside-links-caption"> Contact Me </h4>
+						<h4 class = "outside-links-caption">Contact Me</h4>
 						<a href = "https://www.linkedin.com/in/marco-otero935" class = "linkedin-icon" target = "_blank">
 							<img src = "assets/icons8-linkedin.svg" class = "linkedin-icon-img">					
 						</a>
@@ -96,7 +96,7 @@ I thrive on building from the ground up whether it's designing a 2D game in C++ 
 				</div>
 			</div>
   				<div class="bottom-container">
-					<h2>Currently Exploring</h2>
+					<h2 class = "bottom-container-title">Currently Exploring</h2>
 					<div class="learning-now">
 						<div class="learning-item">
 							<img src="assets/OIP.jpg" alt="rpg" class="learning-image" />
@@ -109,7 +109,7 @@ I thrive on building from the ground up whether it's designing a 2D game in C++ 
 							<img src="assets/OIP.jpg" alt="openGL" class="learning-image" />
 							<div class="learning-text">
 								<div class="learning-title">OpenGL</div>
-								<p>Exploring shader compilation vertex buffer management, sprite animation, and camera handling all written from scratch. By desigining classes like Texture, Mesh. Sprite, and Shader in C++, I am gaining experience with GPU pipelines, OpenGL state management and modular software design. It is part of my broader goal to master low-level systems and rendering workflows beyond standard game engines.</p>
+								<p class ="learning-description">Exploring shader compilation vertex buffer management, sprite animation, and camera handling all written from scratch. By desigining classes like Texture, Mesh. Sprite, and Shader in C++, I am gaining experience with GPU pipelines, OpenGL state management and modular software design. It is part of my broader goal to master low-level systems and rendering workflows beyond standard game engines.</p>
 							</div>
 						</div>
 					</div>
